--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
+    "react-native-safe-module": "^1.2.0",
     "react-native-screens": "~2.15.2",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.2.1"
